# Window-Windowsapi-wrapper

./: CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: Window.cpp.D07EFCD0CD4C120F.idx  Window.hpp.615ACD0225D0C8BD.idx  main.cpp.AFD591E65F5BCDA5.idx
include/: Window.hpp
src/: main.cpp
src/lib/: Window.cpp
